--- a/public/css/index.css
+++ b/public/css/index.css
@@ -113,7 +113,7 @@ html[data-theme="dark"]{
   --color-new: #a78bfa;
   --color-bestseller: #fb923c;
   
-  --color-bg-soft: #1a202c;
+  --color-bg-soft: #2f3239;
   --color-bg-overlay: #000000b3;
   
   --color-link: #4fd826;
