--- a/view/listings/privacyPolicy.ejs
+++ b/view/listings/privacyPolicy.ejs
@@ -1,10 +1,11 @@
-<%-layout("layouts/boilerPlateCode.ejs")%>
+<%-layout("layouts/boilerPlateCode.ejs")%>  
+<div class="privacy-policy">
 <div class="privacy_policy_main_box">
-    <h4>PRIVACY POLICY</h4>
+    <h4 id="privacy_policy_Heading">PRIVACY POLICY</h4>
     <div class="disclaimer">
-        <div class="disclaimer-head">
-        <h5> <i>Disclaimer:</i> </h5>
-        <p ><i> In case of any discrepancy or difference, the English version will take precedence over the translation</i></p>
+        <div class="disclaimer-head ">
+        <h5 class="privacy-policy-head-common" > <i>Disclaimer:</i> </h5>
+        <p class="disclaimer-head-para" ><i> In case of any discrepancy or difference, the English version will take precedence over the translation</i></p>
       </div>
       <div class="disclaimer-detail">
         <p class="privacy-policy-detail" >We value the trust you place in us and recognize the importance of secure transactions and information privacy. This Privacy Policy describes how shopcard Internet Private Limited and its affiliates (collectively “shopcard, we, our, us”) collect, use, share or otherwise process your personal data through shopcard website www.shopcard.com, its mobile application, and m-site (hereinafter referred to as the “Platform”).
@@ -13,7 +14,7 @@
         </p>
       </div>
       <div class="your-collection-information">
-        <h4 class="privacy-policy-head-intro" >Collection of Your Information</h4>
+        <h4 class="privacy-policy-head-intro  privacy-policy-head-common " >Collection of Your Information</h4>
         <p class="privacy-policy-detail"> When you use our Platform, we collect and store your information which is provided by you from time to time. Once you give us your personal data, you are not anonymous to us. Where possible, we indicate which fields are required and which fields are optional. You always have the option to not provide data by choosing not to use a particular service, product or feature on the Platform.
         <br>   <br> 
         We may track your buying behavior, preferences, and other information that you choose to provide on our Platform. We use this information to do internal research on our users' demographics, interests, and behavior to better understand, protect and serve our users. This information is compiled and analyzed on an aggregated basis. This information may include the URL that you just came from (whether this URL is on our Platform or not), which URL you next go to (whether this URL is on our Platform or not), your computer browser information, and your IP address.  
@@ -30,7 +31,7 @@
         </p>
       </div>
       <div class="Demographic-user-information">
-        <h4 class="privacy-policy-head-intro" >Use of Demographic / Profile Data / Your Information</h4>
+        <h4 class="privacy-policy-head-intro privacy-policy-head-common " >Use of Demographic / Profile Data / Your Information</h4>
         <p class="privacy-policy-detail" >We use your personal data to take and fulfill orders, deliver products and services, process payments, and communicate with you about orders, products and services, and promotional offers. To the extent we use your personal data to market to you, we will provide you the ability to opt-out of such uses. We use your personal data to assist sellers and business partners in handling and fulfilling orders; enhancing customer experience; resolve disputes; troubleshoot problems; help promote a safe service; collect money; measure consumer interest in our products and services; inform you about online and offline offers, products, services, and updates; customize and enhance your experience; report to regulatory authorities wherever required, detect and protect us against error, fraud and other criminal activity; enforce our terms and conditions; and as otherwise described to you at the time of collection of information.
             <br> <br>
             With your consent, we may have access to your SMS, instant messages, contacts in your directory, location, camera, photo gallery and device information. We may also request you to provide your PAN, credit information report (from credit agencies), GST Number, Government issued ID cards/number and Know-Your-Customer (KYC) details to: (i) check your eligibility for certain products and services like insurance, credit and payment products; (ii) issue GST invoice for the products and services purchased for your business requirements; (iii) enhance your experience on the Platform and provide you access to the products and services being offered by us, sellers, affiliates or lending partners. You understand that your access to these products/services may be affected in the event consent is not provided to us.
@@ -41,13 +42,13 @@
         </p>
       </div>
       <div class="cookies">
-        <h4 class="privacy-policy-head-intro">Cookie</h4>
+        <h4 class="privacy-policy-head-intro privacy-policy-head-common">Cookie</h4>
         <p class="privacy-policy-detail">
             We use data collection devices such as "cookies" on certain pages of the Platform to help analyze our web page flow, measure promotional effectiveness, and promote trust and safety. "Cookies" are small files placed on your hard drive that assist us in providing our services. Cookies do not contain any of your personal data. We offer certain features that are only available through the use of a "cookie". We also use cookies to allow you to enter your password less frequently during a session. Cookies can also help us provide information that is targeted to your interests. Most cookies are "session cookies," meaning that they are automatically deleted from your hard drive at the end of a session. You are always free to decline/delete our cookies if your browser permits, although in that case you may not be able to use certain features on the Platform and you may be required to re-enter your password more frequently during a session. Additionally, you may encounter "cookies" or other similar devices on certain pages of the Platform that are placed by third parties. We do not control the use of cookies by third parties. We use cookies from third-party partners such as Google Analytics for marketing and analytical purposes. Google Analytics helps us understand how our customers use the site. You can read more about how Google uses your personal data here: <a href="https://www.google.com/intl/en/policies/privacy/.">https://www.google.com/intl/en/policies/privacy/.</a>  You can also control the use of cookies at the individual browser level, but if you choose to disable cookies, it may limit your use of certain features or functions on the services.
         </p>
       </div>
       <div class="customer-support">
-        <h4 class="privacy-policy-head-intro">Customer Support</h4>
+        <h4 class="privacy-policy-head-intro privacy-policy-head-common ">Customer Support</h4>
         <p class="privacy-policy-detail">
             If you have a query, concern, or complaint in relation to collection or usage of your personal data under this Privacy Policy, please contact us at privacy.grievance@flipkart.com.
             <br> <br>
@@ -55,4 +56,5 @@
         </p>
       </div>
     </div>
+</div>
 </div>
