--- a/view/listings/watchProduct.ejs
+++ b/view/listings/watchProduct.ejs
@@ -12,10 +12,10 @@
             <%} %>
         </div> 
        <img data-aos="fade-up" data-aos-offset="20" data-aos-delay="10" data-aos-duration="500" class="wtc-productimage" src="<%-product.image[0] %>" alt="Product image">
-       <!-- Like  -->
+       <!-- Product Like  -->
        <div class="wtc-productLikeBox"><i class="fa-solid fa-heart"></i></div>
       <div class="wtc-productShareBox">
-        <!-- From Uiverse.io by Mohammad-Rahme-576 -->
+        <!-- Product Share-->
         <div class="tooltip-container">
             <div class="button-content">
                 <span class="text"></span>
@@ -58,7 +58,7 @@
             </div>
         </div>
     
-    </div>
+       </div>
        <div class="wtc-buy-productBtn_box">
         <a href="/shopcard/<%=product._id%>/checkout"  data-aos="fade-down" data-aos-offset="-100">
          <button class="buy_Productbutton">
